--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -295,8 +295,11 @@ app.interest.max-chars=30
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/login?error
+
 #24 hours
-app.user.delete.delay=86400000
+app.user.delete.duration.valid=86400000
+#5 minutes
+app.user.password-reset.duration.valid=300000
 
 #schedules
 app.schedule.enabled=true
@@ -308,9 +311,5 @@ app.schedule.long=3600000
 app.schedule.delay.captcha=300000
 #90 days
 app.schedule.delay.hide=9720000000
-#5 minutes
-app.schedule.delay.password-reset=300000
-#24 hours
-app.schedule.delay.delete-account=108000000
 #90 days
 app.schedule.delay.contact=9720000000
