--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
 
+custom: https://alovoa.com/donate-list
 ko_fi: Alovoa
 custom: https://www.buymeacoffee.com/alovoa
