--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
-custom: https://alovoa.com/donate-list
+custom: ['https://alovoa.com/donate-list']
 ko_fi: Alovoa
-custom: https://www.buymeacoffee.com/alovoa
