--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,6 @@
 # These are supported funding model platforms
 
-custom: ['https://alovoa.com/donate-list']
+custom: ['https://alovoa.com/donate-list', 'https://www.buymeacoffee.com/alovoa']
 ko_fi: Alovoa
+liberapay: alovoa
+open_collective: alovoa
