--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,5 +2,5 @@
 
 custom: ['https://alovoa.com/donate-list', 'https://www.buymeacoffee.com/alovoa']
 ko_fi: Alovoa
-liberapay: alovoa
+liberapay: alovoa/donate
 open_collective: alovoa
