--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -259,6 +259,10 @@ app.tos.update-date=2021-09-22
 app.name=Alovoa
 app.domain=https://localhost:8443
 
+#secret in url to verify that the transaction is legit, change in production!
+app.donate.kofi.key=kofi123
+app.donate.bmac.key=bmac123
+
 app.mail.plus-addressing=false
 app.first-name.length-min=2
 app.first-name.length-max=10
