--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -281,6 +281,7 @@ app.profile.image.max=4
 app.profile.description.size=255
 app.search.max=20
 app.search.max.distance=100
+app.search.estimate.max=200
 app.message.size=255
 app.conversation.messages-max=50
 app.donate.users.max=100
@@ -296,6 +297,7 @@ app.intention.delay=86400000
 app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
+app.interest.autocomplete.max=5
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/login?error
