--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #only used when not configured in run configuration, dev profile always recommended to save in IDE
 spring.profiles.active=test 
 
-server.port=${PORT:8443}
+server.port=${PORT:8080}
 
 #enable to force https for development
 #server.ssl.key-store-type=PKCS12
@@ -257,7 +257,7 @@ app.company.name=Alovoa
 app.privacy.update-date=2021-06-16
 app.tos.update-date=2021-09-22
 app.name=Alovoa
-app.domain=https://localhost:8443
+app.domain=http://localhost:8080
 
 #secret in url to verify that the transaction is legit, change in production!
 app.donate.kofi.key=kofi123
