--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.plan_cache_max_size=16
 spring.jpa.properties.hibernate.plan_parameter_metadata_max_size=16
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 
 ### KEYS AND CREDENTIALS ###
 #spring.datasource.password=
