Remove captcha when reporting users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -181,7 +181,7 @@ bucket4j.filters[11].rate-limits[0].bandwidths[0].time=60
 bucket4j.filters[11].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[12].cache-name=bucket4j
-bucket4j.filters[12].url=/user/report/*
+bucket4j.filters[12].url=/user/report
 bucket4j.filters[12].metrics.tags[0].key=IP
 bucket4j.filters[12].metrics.tags[0].expression=getRemoteAddr()
 bucket4j.filters[12].rate-limits[0].bandwidths[0].capacity=5
