Add maven compiler plugin to pom

--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,15 @@
 				<artifactId>springdoc-openapi-maven-plugin</artifactId>
 				<version>1.4</version>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 </project>
