--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,5 @@
 # Add labels to any any pull request with changes to the specified paths
-android:
-- packages/smooth_app/android/**/*
+
+# Example for Alovoa i18n
+i18n:
+- src/main/resources/i18n/**/*
