--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+.directory
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
@@ -43,3 +44,4 @@ alovoa.txt
 ### Keys Properties ###
 application-dev.properties
 application-prod.properties
+
