--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.hikari.maxLifetime=1800000
 #Insert your oauth2 ids and secrets here
 #spring.security.oauth2.client.registration.google.client-id=<your client id>
 #spring.security.oauth2.client.registration.google.client-secret=<your client secret>
-#spring.security.oauth2.client.registration.facebook.client-id=<your client id> 
+#spring.security.oauth2.client.registration.facebook.client-id=<your client id>
 #spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
@@ -46,6 +46,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
