--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa_test?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=alovoa_test
 spring.datasource.password=alovoa_test
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=standard
 
 # keys for transparent database encryption
 app.text.key=bqupWgmhCj3fedLxYdNAy2QFA2bS9XJX
