Use default hikari settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ server.http2.enabled=true
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.hikari.maximum-pool-size=100
-spring.datasource.hikari.connectionTimeout=30000   
-spring.datasource.hikari.idleTimeout=600000          
-spring.datasource.hikari.maxLifetime=1800000 
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.connectionTimeout=30000
+#spring.datasource.hikari.idleTimeout=600000
+#spring.datasource.hikari.maxLifetime=1800000
 
 #Insert your oauth2 ids and secrets here
 #spring.security.oauth2.client.registration.google.client-id=<your client id>
