Changed to HikariDataSource

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<version>4.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
 		<!-- Spring 3rd party dependencies -->
 		<dependency>
 		    <groupId>org.mariadb.jdbc</groupId>
