--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,6 +1,33 @@
 #only used when not configured in run configuration, dev profile always recommended to save in IDE
 spring.profiles.active=test 
 
+spring.jpa.open-in-view=true
+
+management.endpoint.refresh.enabled=true
+management.endpoints.web.exposure.include=refresh
+management.endpoints.web.base-path=/actuator
+
+#spring.cloud.refresh.extra-refreshable=com.zaxxer.hikari.HikariDataSource
+
+# New config solution !!!
+app.configurl=file:///config.json
+
+##############################################################################
+spring.cloud.vault.uri=https://vault.test.felsing.net:8200
+#spring.cloud.vault.ssl.trust-store=classpath:truststore.jks
+#spring.cloud.vault.ssl.trust-store-password=changeit
+#spring.cloud.vault.ssl.trust-store-type=jks
+#spring.cloud.vault.ssl.enabled-protocols=TLSv1.2,TLSv1.3
+#spring.cloud.vault.ssl.enabled-cipher-suites=TLS_AES_128_GCM_SHA256
+spring.cloud.vault.authentication=token
+# Provide vault.token by operating system environment variable "vault.token":
+spring.cloud.vault.token=${vault.token}
+spring.cloud.vault.templatepath=database/creds/mysqlrole
+##############################################################################
+# cp /etc/pki/ca-trust/extracted/java/cacerts src/main/resources/truststore.jks
+# keytool -keystore truststore.jks  -alias vault-ca -import -file ca.crt -storepass changeit -noprompt
+##############################################################################
+
 server.port=${PORT:8080}
 server.forward-headers-strategy=native
 #server.tomcat.redirect-context-root=false
@@ -20,32 +47,35 @@ spring.main.allow-bean-definition-overriding=true
 server.http2.enabled=true
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.connectionTimeout=30000
-#spring.datasource.hikari.idleTimeout=600000
+spring.datasource.url=jdbc:mariadb://mysql.test.felsing.net:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
 #spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maxLifetime=900000
+spring.datasource.hikari.allow-pool-suspension=true
 
 #Insert your oauth2 ids and secrets here
 spring.security.oauth2.client.registration.google.client-id=test
 spring.security.oauth2.client.registration.google.client-secret=test
-spring.security.oauth2.client.registration.facebook.client-id=test
-spring.security.oauth2.client.registration.facebook.client-secret=test
+spring.security.oauth2.client.registration.google.scope[0]=email
+spring.security.oauth2.client.registration.google.scope[1]=profile
 
-# This works with a Keycloak OpenID/Connect realm
+#spring.security.oauth2.client.registration.facebook.client-id=test
+#spring.security.oauth2.client.registration.facebook.client-secret=test
+#spring.security.oauth2.client.registration.facebook.scope[0]=email
+#spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
+
+# Example if you operate your own Keycloak server
 spring.security.oauth2.client.registration.ip6li.client-id=example-clientid
 spring.security.oauth2.client.registration.ip6li.client-secret=example-clientid-password
-spring.security.oauth2.client.provider.ip6li.issuer-uri=https://auth1.ip6.li/realms/a-keycloak-realm
+spring.security.oauth2.client.provider.ip6li.issuer-uri=https://auth1.ip6.li/realms/matrix
+spring.security.oauth2.client.registration.ip6li.scope[0]=openid
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
 
 spring.web.locale=en_EN
-
-spring.security.oauth2.client.registration.google.scope[0]=email
-spring.security.oauth2.client.registration.google.scope[1]=profile
-spring.security.oauth2.client.registration.facebook.scope[0]=email
-spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
-spring.security.oauth2.client.registration.ip6li.scope[0]=openid
 
 server.servlet.session.timeout=1h
 server.servlet.session.cookie.max-age=1h
@@ -67,8 +97,6 @@ spring.jpa.properties.hibernate.plan_parameter_metadata_max_size=16
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 
 ### KEYS AND CREDENTIALS ###
-spring.datasource.password=MariaDB-Password-for-username
-spring.datasource.username=alovoa
 #keys for transparent database encryption
 app.text.key= #key must be 16, 24 or 32 bytes long
 app.text.salt= #salt must be 16 bytes long
@@ -85,7 +113,7 @@ spring.mail.test-connection=true
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.springframework.web=INFO
-logging.level.root=warn
+logging.level.root=info
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate=ERROR
 logging.file.name=./logs/spring.log
@@ -272,7 +300,7 @@ app.privacy.update-date=2021-06-16
 app.tos.update-date=2021-09-22
 app.name=Alovoa
 app.domain=http://localhost:8080
-app.captcha.enabled=true
+app.captcha.enabled=false
 
 #secret in url to verify that the transaction is legit, change in production!
 app.donate.kofi.key=kofi123
