--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa_test?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=alovoa_test
-spring.datasource.password=alovoa_test
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://mysql:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.jpa.properties.hibernate.id.db_structure_naming_strategy=standard
 
 # keys for transparent database encryption
@@ -23,3 +22,36 @@ spring.security.oauth2.client.registration.google.client-id=test
 spring.security.oauth2.client.registration.google.client-secret=test
 spring.security.oauth2.client.registration.facebook.client-id=test 
 spring.security.oauth2.client.registration.facebook.client-secret=test
+
+##############################################################################
+spring.cloud.vault.uri=https://vault.test.felsing.net:8200
+spring.cloud.vault.token=${vault.token}
+spring.cloud.vault.templatepath=database/creds/mysqlrole
+#spring.cloud.vault.ssl.trust-store=classpath:truststore.jks
+#spring.cloud.vault.ssl.trust-store-password=changeit
+##############################################################################
+# cp /etc/pki/ca-trust/extracted/java/cacerts truststore.jks
+# keytool -keystore truststore.jks  -alias vault-ca -import -file ca.crt -storepass changeit -noprompt
+##############################################################################
+
+##############################################################################
+spring.data.redis.cluster.nodes=10.96.1.31:6373,10.96.1.32:6374,10.96.1.33:6375,10.96.1.34:6376,10.96.1.35:6377,10.96.1.36:6378
+spring.data.redis.ssl.enabled=true
+
+# keytool -import -alias "redis" -file "redis-truststore.pem" -keystore "redis-truststore.jks" -storepass changeit -noprompt
+# openssl pkcs12 -export -name redis -in redis-user.pem -out redis-user.p12
+spring.ssl.bundle.jks.redisbundle.key.alias=redis
+
+spring.ssl.bundle.jks.redisbundle.keystore.location=classpath:redis-user.p12
+spring.ssl.bundle.jks.redisbundle.keystore.password=changeit
+spring.ssl.bundle.jks.redisbundle.keystore.type=pkcs12
+
+spring.ssl.bundle.jks.redisbundle.truststore.location=classpath:redis-truststore.jks
+spring.ssl.bundle.jks.redisbundle.truststore.password=changeit
+spring.ssl.bundle.jks.redisbundle.truststore.type=jks
+
+spring.data.redis.ssl.bundle=redisbundle
+
+spring.data.redis.username=alovoa
+spring.data.redis.password=4F88wnnxIM4GoUHtFcMa6Evy5MyDavSe
+##############################################################################
