--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
             <artifactId>reverse-country-code</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.1.2</version>
+        </dependency>
 
     </dependencies>
 
