--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.profiles.active=test
 
 server.port=${PORT:8080}
 
+app.captcha.login.enabled=false
+app.captcha.delete.enabled=false
+app.captcha.imprint.enabled=true
+app.captcha.password.enabled=false
+
 #enable to force https for development
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store=alovoa.p12
