--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,10 +30,15 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotEx
 
 spring.web.locale=en_EN
 
-spring.security.oauth2.client.registration.google.scope[0]=email
-spring.security.oauth2.client.registration.google.scope[1]=profile
-spring.security.oauth2.client.registration.facebook.scope[0]=email
-spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
+#spring.security.oauth2.client.registration.google.scope[0]=email
+#spring.security.oauth2.client.registration.google.scope[1]=profile
+#spring.security.oauth2.client.registration.facebook.scope[0]=email
+#spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
+spring.security.oauth2.client.registration.keycloak.scope[0]=openid
+spring.security.oauth2.client.registration.keycloak.scope[1]=email
+spring.security.oauth2.client.registration.keycloak.scope[2]=profile
+
+app.local.login.enabled=false
 
 server.servlet.session.timeout=1h
 server.servlet.session.cookie.max-age=1h
