--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,13 @@
 				<groupId>com.github.buckelieg</groupId>
 				<artifactId>minify-maven-plugin</artifactId>
 				<version>2.0.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-utils</artifactId>
+						<version>3.5.1</version>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<id>default-minify</id>
