[284][WIP][FEATURE] Use alovoa-expo as official frontend for the web

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -302,6 +302,7 @@ app.interest.autocomplete.max=5
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/login?error
+app.url.front-end=http://localhost:8081
 
 #24 hours
 app.user.delete.duration.valid=86400000
