Improve compatibility check: You can now like any user that liked you. Added flag to ignore intention.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -291,6 +291,7 @@ app.profile.description.size=255
 app.search.max=20
 app.search.max.distance=100
 app.search.estimate.max=200
+app.search.ignore-intention=true
 app.message.size=255
 app.conversation.messages-max=50
 app.donate.users.max=100
