--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,18 +13,18 @@ spring.main.allow-bean-definition-overriding=true
 
 server.http2.enabled=true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 #spring.datasource.hikari.maximum-pool-size=10
 #spring.datasource.hikari.connectionTimeout=30000
 #spring.datasource.hikari.idleTimeout=600000
 #spring.datasource.hikari.maxLifetime=1800000
 
 #Insert your oauth2 ids and secrets here
-spring.security.oauth2.client.registration.google.client-id=test
-spring.security.oauth2.client.registration.google.client-secret=test
-spring.security.oauth2.client.registration.facebook.client-id=test
-spring.security.oauth2.client.registration.facebook.client-secret=test
+#spring.security.oauth2.client.registration.google.client-id=<your client id>
+#spring.security.oauth2.client.registration.google.client-secret=<your client secret>
+#spring.security.oauth2.client.registration.facebook.client-id=<your client id>
+#spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
 
@@ -42,8 +42,8 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
 server.compression.min-response-size=10240
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.id.db_structure_naming_strategy=legacy
@@ -55,17 +55,17 @@ spring.jpa.properties.hibernate.plan_parameter_metadata_max_size=16
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 
 ### KEYS AND CREDENTIALS ###
-spring.datasource.password=
-spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.username=
 #keys for transparent database encryption
-app.text.key= bqupWgmhCj3fedLxYdNAy2QFA2bS9XJX
-app.text.salt= sFRKQAhwdrZq44FQ
-app.admin.email=admin@alovoa.com
-app.admin.key=password
-spring.mail.password=rrasxirdakikapiq
-spring.mail.host=smtp.gmail.com
+#app.text.key= #key must be 16, 24 or 32 bytes long
+#app.text.salt= #salt must be 16 bytes long
+#app.admin.email=
+#app.admin.key=
+#spring.mail.password=<login password to smtp server>
+spring.mail.host=mail.gmx.net
 spring.mail.port=587
-spring.mail.username=pranavbk.zohotest@gmail.com
+spring.mail.username=nonononoki@gmx.de
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.test-connection=true
@@ -312,7 +312,7 @@ app.interest.autocomplete.max=5
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/login?error
-app.url.front-end=http://localhost:8080/
+app.url.front-end=http://localhost:8081
 
 #24 hours
 app.user.delete.duration.valid=86400000
