Add user prompts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -309,6 +309,8 @@ app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
 app.interest.autocomplete.max=5
+app.prompt.max=6
+app.prompt.length.max=120
 app.donation.modulus=10
 app.url.auth.success=/
 app.url.auth.failure=/login?error
