feat: Update to Spring Boot 3.2.x (#389)
Update to Spring Boot 3.2.3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
 server.compression.min-response-size=10240
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
@@ -69,6 +69,7 @@ spring.mail.username=nonononoki@gmx.de
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.test-connection=true
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
