You can now request account deletion from the imprint page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -261,6 +261,14 @@ bucket4j.filters[21].rate-limits[0].bandwidths[0].capacity=5
 bucket4j.filters[21].rate-limits[0].bandwidths[0].time=1200
 bucket4j.filters[21].rate-limits[0].bandwidths[0].unit=seconds
 
+bucket4j.filters[22].cache-name=bucket4j
+bucket4j.filters[22].url=/imprint/delete-account-request
+bucket4j.filters[22].metrics.tags[0].key=IP
+bucket4j.filters[22].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[22].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[22].rate-limits[0].bandwidths[0].time=1200
+bucket4j.filters[22].rate-limits[0].bandwidths[0].unit=seconds
+
 
 # custom values
 app.company.name=Alovoa
