Increase max media size

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -285,7 +285,8 @@ app.mail.plus-addressing=false
 app.first-name.length-min=2
 app.first-name.length-max=10
 app.audio.max-time=10
-app.media.max-size=2097152
+app.audio.max-size=10000000
+app.image.max-size=5000000
 app.captcha.length=4
 app.password-token.length=32
 app.age.min=16
