Upload, store and serve media data as binary instead of base64 #392

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotEx
 
 spring.web.locale=en_EN
 
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
+
 spring.security.oauth2.client.registration.google.scope[0]=email
 spring.security.oauth2.client.registration.google.scope[1]=profile
 spring.security.oauth2.client.registration.facebook.scope[0]=email
