--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,11 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/alovoa?createDatabaseIfNotEx
 
 spring.web.locale=en_EN
 
+spring.cache.type=caffeine
+spring.cache.jcache.provider=com.github.benmanes.caffeine.jcache.spi.CaffeineCachingProvider
+spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=3600s
+spring.cache.cache-names=bucket4j,UserProfilePictureRepository.findByUuid,UserAudioRepository.findByUuid,UserImageRepository.findByUuid,UserVerificationPictureRepository.findByUuid
+
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
 
@@ -81,13 +86,8 @@ logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate=ERROR
 logging.file.name=./logs/spring.log
 
-#caching
-spring.cache.cache-names=bucket4j
-spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=1d
-
 #bucket4j
 bucket4j.enabled=true
-
 bucket4j.filters[0].cache-name=bucket4j
 bucket4j.filters[0].url=.*
 bucket4j.filters[0].metrics.tags[0].key=IP
