feat: [390] - Purge non-confirmed users periodically

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -304,3 +304,5 @@ app.schedule.delay.captcha=300000
 app.schedule.delay.hide=9720000000
 #90 days
 app.schedule.delay.contact=9720000000
+#14 days
+app.schedule.delay.user.cleanup=1209600000
