Replace minify-maven-plugin with resources-optimizer-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -175,35 +175,41 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.github.buckelieg</groupId>
-                <artifactId>minify-maven-plugin</artifactId>
-                <version>2.0.1</version>
+                <groupId>org.primefaces.extensions</groupId>
+                <artifactId>resources-optimizer-maven-plugin</artifactId>
+                <version>2.6.2</version>
                 <executions>
                     <execution>
-                        <id>default-minify</id>
-                        <phase>prepare-package</phase>
-                        <configuration>
-                            <charset>UTF-8</charset>
-                            <jsEngine>CLOSURE</jsEngine>
-                            <skipMerge>true</skipMerge> <!-- do not create one big file -->
-                            <nosuffix>true</nosuffix> <!-- do not use suffix like 'min' -->
-                            <webappTargetDir>${project.build.directory}/classes/static</webappTargetDir>
-                            <webappSourceDir>src/main/resources/static</webappSourceDir>
-                            <cssSourceDir>css</cssSourceDir>
-                            <cssSourceIncludes>
-                                <cssSourceInclude>*.css</cssSourceInclude>
-                            </cssSourceIncludes>
-                            <jsSourceDir>js</jsSourceDir>
-                            <jsSourceIncludes>
-                                <jsSourceInclude>*.js</jsSourceInclude>
-                            </jsSourceIncludes>
-
-                        </configuration>
+                        <id>optimize</id>
                         <goals>
-                            <goal>minify</goal>
+                            <goal>optimize</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <languageIn>ECMASCRIPT_2016</languageIn>
+                    <resourcesSets>
+                        <resourcesSet>
+                            <inputDir>${project.build.directory}/classes/static/js</inputDir>
+                            <includes>
+                                <include>**/*.js</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/min.js</exclude>
+                                <exclude>lib/**</exclude>
+                            </excludes>
+                        </resourcesSet>
+                        <resourcesSet>
+                            <inputDir>${project.build.directory}/classes/static/css</inputDir>
+                            <includes>
+                                <include>**/*.css</include>
+                            </includes>
+                            <excludes>
+                                <exclude>lib/**</exclude>
+                            </excludes>
+                        </resourcesSet>
+                    </resourcesSets>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
