Implement adding a mechanism to delete invalid profiles

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # keys for transparent database encryption
 app.text.key=bqupWgmhCj3fedLxYdNAy2QFA2bS9XJX
 app.text.salt=sFRKQAhwdrZq44FQ
+app.text.encrypt.return-null-on-fail=true
 
 app.admin.email=admin@alovoa.com
 app.admin.key=password
